# bhout

./: app.py  pyproject.toml  replit.md  requirements.txt
attached_assets/: Pasted--DOCTYPE-html-html-lang-ar-dir-rtl-head-meta-charset-UTF-8-title--1753970363778_1753970363781.txt
services/: image_search.py  research_generator.py
static/js/: app.js  background.js  tutorial.js
templates/: index.html
